# youtubedl-service

./: .gitignore  CHANGELOG.md  README.md  youtubedl-service.cabal
.ffmpeg/: readme.txt
.ffmpeg/manpages/: ffmpeg-all.txt  ffmpeg-codecs.txt  ffmpeg-filters.txt  ffmpeg.txt
app/: Main.hs  Types.hs
