cabal-version:      2.4
name:               youtubedl-service
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             ukaj808
maintainer:         ukaj808@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable youtubedl-service
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Types
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base >=4.7 && <5,
        warp >=3.3,
        twain ==2.1.0.0,
        bytestring,
        text,
        aeson,
        uuid,
        process,
        directory
    hs-source-dirs:   app
    default-language: Haskell2010
